--- a/sentinel-dashboard/src/main/resources/application.properties
+++ b/sentinel-dashboard/src/main/resources/application.properties
@@ -19,3 +19,12 @@ auth.password=sentinel
 # Inject the dashboard version. It's required to enable
 # filtering in pom.xml for this resource file.
 sentinel.dashboard.version=${project.version}
+
+spring.profiles.active=dev
+
+app.id=sentinel-dashboard
+apollo.bootstrap.enabled=true
+apollo.bootstrap.namespaces=application
+
+apollo.portal.url=http://localhost:8080
+apollo.openapi.token=XXX
