--- a/sentinel-dashboard/src/main/resources/application.properties
+++ b/sentinel-dashboard/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port: 8080
+
 #spring settings
 spring.http.encoding.force=true
 spring.http.encoding.charset=UTF-8
@@ -29,3 +31,4 @@ apollo.bootstrap.namespaces=application
 
 apollo.portal.url=http://localhost:8080
 apollo.openapi.token=XXX
+apollo.rule.namespace=BASE.sentinel-rule
