--- a/sentinel-dashboard/src/main/resources/application.properties
+++ b/sentinel-dashboard/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port: 8080
+
 #spring settings
 spring.http.encoding.force=true
 spring.http.encoding.charset=UTF-8
@@ -13,7 +15,7 @@ logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %
 #logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
 #auth settings
-auth.filter.exclude-urls=/,/auth/login,/auth/logout,/registry/machine,/version
+auth.filter.exclude-urls=/,/auth/login,/auth/logout,/registry/machine,/version,/slb/health
 auth.filter.exclude-url-suffixes=htm,html,js,css,map,ico,ttf,woff,png
 # If auth.enabled=false, Sentinel console disable login
 auth.username=sentinel
@@ -22,3 +24,14 @@ auth.password=sentinel
 # Inject the dashboard version. It's required to enable
 # filtering in pom.xml for this resource file.
 sentinel.dashboard.version=${project.version}
+
+
+spring.profiles.active=dev
+
+app.id=sentinel-dashboard
+apollo.bootstrap.enabled=true
+apollo.bootstrap.namespaces=application
+
+apollo.portal.url=http://apollo.xxx.com
+apollo.openapi.token=xxx
+apollo.rule.namespace=BASE.sentinel-rule
